development-runs/317/k8s/validate/resources/sme-app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sme-app
  labels:
    io.kompose.service: frontend
    app: frontend
  annotations:
    kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
    kompose.version: 1.34.0 (cbf2835db)
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      labels:
        io.kompose.service: frontend
        app: frontend
      annotations:
        kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
        kompose.version: 1.34.0 (cbf2835db)
    spec:
      serviceAccountName: default-sa-sme-app
      containers:
        - name: frontend
          image: ralfx22/sme-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
