development-runs/317/k8s/validate/resources/sme-app-quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: sme-app
  labels:
    io.kompose.service: quotes
    app: quotes
  annotations:
    kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
    kompose.version: 1.34.0 (cbf2835db)
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quotes
  template:
    metadata:
      labels:
        io.kompose.service: quotes
        app: quotes
      annotations:
        kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
        kompose.version: 1.34.0 (cbf2835db)
    spec:
      serviceAccountName: default-sa-sme-app
      containers:
        - name: quotes
          image: ralfx22/sme-quotes:latest
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
