development-runs/317/k8s/validate/resources/sme-app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sme-app
  labels:
    io.kompose.service: api
    app: api
  annotations:
    kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
    kompose.version: 1.34.0 (cbf2835db)
spec:
  type: ClusterIP
  selector:
    io.kompose.service: api
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      protocol: TCP
