development-runs/317/k8s/validate/resources/sme-app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sme-app
  labels:
    io.kompose.service: frontend
    app: frontend
  annotations:
    kompose.cmd: kompose convert -f docker-compose-317.yml -o k8s-317/
    kompose.version: 1.34.0 (cbf2835db)
spec:
  type: ClusterIP
  selector:
    io.kompose.service: frontend
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      protocol: TCP
